observability/argo/values/test-app-common/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: test-app
    istio-injection: enabled
  name: test-app
spec:
  finalizers:
  - kubernetes
