observability/argo/values/test-app-common/keda-http-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: app-b-keda-http-addon-vs
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/shared-gateway
  http:
  - match:
    - port: 8080
      uri:
        prefix: /app-keda/
    - port: 8080
      uri:
        prefix: /app-keda
    rewrite:
      uri: /
    route:
    - destination:
        # host: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
        # port:
        #   number: 8080
        host: app-b.test-app.svc.cluster.local
        port:
          number: 8000
